# aula18_bootcamp

./: exemplo_00.py  exemplo_02_json.py  pyproject.toml
